# roguekit

.github/workflows/: rust.yml
bracket-color/: Cargo.toml
bracket-color/src/: hsv.rs  lerpit.rs  lib.rs  rgb.rs  rgba.rs  test_utils.rs  xpcolor.rs
bracket-geometry/: Cargo.toml
bracket-geometry/src/: point.rs  point3.rs  rect.rs  rectf.rs
bracket-pathfinding/: Cargo.toml
bracket-pathfinding/benches/: astar_benchmark.rs  fov_benchmark.rs
bracket-random/: Cargo.toml
bracket-random/benches/: dice.rs
bracket-random/src/: random.rs
bracket-terminal/: Cargo.toml
