[package]
name = "bracket-random"
version = "0.8.7"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2021"
publish = true
description = "Random number generator (xorshift based), focused on dice rolling. Optionally includes parsing of RPG-style dice strings (e.g. \"3d6+12\"). Part of the bracket-lib family."
homepage = "https://github.com/thebracket/bracket-lib"
repository = "https://github.com/thebracket/bracket-lib"
readme = "README.md"
keywords = ["roguelike", "gamedev", "random", "xorshift", "dice"]
categories = ["game-engines", "random"]
license = "MIT"

[features]
default = [ "parsing" ]
parsing = [ "regex", "lazy_static" ]
serde = [ "serde_crate", "rand_chacha/serde1" ]

[dependencies]
rand_chacha = { version = "0.3.1", default-features = false }
regex = { version = "1.3.6", optional = true }
lazy_static = { version = "1.4.0", optional = true }
serde_crate = { version = "~1.0.110", features = ["derive"], optional = true, package = "serde" }
rand = { version = "0.8", default-features = false, features = [ "getrandom" ] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.2", features = [ "js" ] }

[dev-dependencies]
criterion = "~0.4"
serde_json = "~1.0"

[[bench]]
name = "dice"
harness = false

[[example]]
name = "dicestring"
required-features = [ "parsing" ]

[[example]]
name = "distribution"
required-features = [ "parsing" ]
